complete main page

--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,24 @@
   <title>CactusSoft</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <link rel="icon" type="image/svg+xml" href="/assets/cactussoft.svg">
+  <link rel="apple-touch-icon" href="/assets/cactussoft.png">
+  <meta name="theme-color" content="#00AE68">
+  <meta name="author" content="CactusWeb">
+  <meta name="description" content="Great tool-set to increase your winrate. Powered by CactusManager.">
 </head>
 <body>
+  
   <app-root></app-root>
 </body>
+<script src="/assets/js/transitService.js" defer></script>
+<script src="/assets/js/transitionControl.js" defer></script>
+<script src="/assets/js/horizontalScrollService.js" defer></script>
+<script src="/assets/js/horizontalScrollControl.js" defer></script>
+<!-- <script src="/assets/libs/three/three.js" defer></script> 
+<script src="/assets/libs/three/orbitcontrols.js" defer></script> 
+<script src="/assets/libs/three/gltf-loader.js" defer></script> 
+<script src="/assets/js/init-3d-cactus.js" defer></script>  -->
+
 </html>
