added Minify js

--- a/src/index.html
+++ b/src/index.html
@@ -16,10 +16,12 @@
   
   <app-root></app-root>
 </body>
-<script src="/assets/js/transitService.js" defer></script>
-<script src="/assets/js/transitionControl.js" defer></script>
-<script src="/assets/js/horizontalScrollService.js" defer></script>
-<script src="/assets/js/horizontalScrollControl.js" defer></script>
+<!-- <script src="/assets/js/transitService.js" defer></script>
+<script src="/assets/js/transitionControl.js" defer></script> -->
+<!-- <script src="/assets/js/horizontalScrollService.js" defer></script>
+<script src="/assets/js/horizontalScrollControl.js" defer></script> -->
+<script src="/assets/js/transit-service.min.js" defer></script>
+<script src="/assets/js/horizontal-scroll.min.js" defer></script>
 <!-- <script src="/assets/libs/three/three.js" defer></script> 
 <script src="/assets/libs/three/orbitcontrols.js" defer></script> 
 <script src="/assets/libs/three/gltf-loader.js" defer></script> 
