--- a/src/index.html
+++ b/src/index.html
@@ -1,16 +1,41 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" prefix="og: http://ogp.me/ns#">
 <head>
   <meta charset="utf-8">
   <title>CactusSoft</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <link rel="icon" type="image/svg+xml" href="/assets/cactussoft.svg">
+  <link rel="icon" type="image/x-icon" href="/assets/cactussoft.png">
   <link rel="apple-touch-icon" href="/assets/cactussoft.png">
   <meta name="theme-color" content="#00AE68">
   <meta name="author" content="CactusWeb">
   <meta name="description" content="Great tool-set to increase your winrate. Powered by CactusManager.">
+
+
+  
+  <meta property="og:image" content="/assets/img/cactussoft.png">
+  <meta property="og:image:secure_url" content="/assets/img/cactussoft.png">
+  <meta name="og:description" content="Great tool-set to increase your winrate. Powered by CactusManager.">
+
+  <meta name="site_name" content="CactusSoft">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="keywords" content="resell, cook-group, cookgroup, autofill, cactus, soft, software, cactussoft, cactusweb, tools, bot, extension, chrome, adidas, shopify, supreme, stripe, aco, filling, autofilling, metalabs, tl, solebox, snipes, link-appender, enigmarobotics, enigma">
+
+  <!-- Yandex.Metrika counter -->
+  <!-- <script type="text/javascript" >
+    (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+    m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+    (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
+    ym(77563180, "init", {
+         clickmap:true,
+         trackLinks:true,
+         accurateTrackBounce:true
+    });
+  </script>
+  <noscript><div><img src="https://mc.yandex.ru/watch/77563180" style="position:absolute; left:-9999px;" alt="" /></div></noscript> -->
+<!-- /Yandex.Metrika counter -->
 </head>
 <body>
   
