Что-то поправил

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
   <meta name="author" content="CactusWeb">
   <meta name="description" content="Great tool-set to increase your winrate. Powered by CactusManager.">
 
-
+  <meta name="robots" content="all" />
   
   <meta property="og:image" content="/assets/img/cactussoft.png">
   <meta property="og:image:secure_url" content="/assets/img/cactussoft.png">
