--- a/src/index.html
+++ b/src/index.html
@@ -6,21 +6,21 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <link rel="icon" type="image/x-icon" href="/assets/cactussoft.png">
-  <link rel="apple-touch-icon" href="/assets/cactussoft.png">
-  <meta name="theme-color" content="#00AE68">
+  <link rel="icon" type="image/x-icon" href="http://cactussoft.std-715.ist.mospolytech.ru/assets/cactussoft.png">
+  <link rel="apple-touch-icon" href="http://cactussoft.std-715.ist.mospolytech.ru/assets/cactussoft.png">
+  <meta name="theme-color" content="#00AE98">
   <meta name="author" content="CactusWeb">
   <meta name="description" content="Great tool-set to increase your winrate. Powered by CactusManager.">
 
   <meta name="robots" content="all" />
   
-  <meta property="og:image" content="/assets/img/cactussoft.png">
-  <meta property="og:image:secure_url" content="/assets/img/cactussoft.png">
+  <meta property="og:image" content="http://cactussoft.std-715.ist.mospolytech.ru/assets/img/cactussoft.png">
+  <meta property="og:image:secure_url" content="http://cactussoft.std-715.ist.mospolytech.ru/assets/img/cactussoft.png">
   <meta name="og:description" content="Great tool-set to increase your winrate. Powered by CactusManager.">
 
   <meta name="site_name" content="CactusSoft">
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="keywords" content="resell, cook-group, cookgroup, autofill, cactus, soft, software, cactussoft, cactusweb, tools, bot, extension, chrome, adidas, shopify, supreme, stripe, aco, filling, autofilling, metalabs, tl, solebox, snipes, link-appender, enigmarobotics, enigma">
+  <meta name="keywords" content="resell, cook-group, cookgroup, autofill, cactus, soft, software, cactussoft_io, cactusweb, tools, bot, extension, chrome, adidas, shopify, supreme, stripe, aco, filling, autofilling, metalabs, tl, solebox, snipes, link-appender, enigmarobotics, enigma, fuse, twittcatcher, satanbots">
 
   <!-- Yandex.Metrika counter -->
   <!-- <script type="text/javascript" >
@@ -43,10 +43,10 @@
 </body>
 <!-- <script src="/assets/js/transitService.js" defer></script>
 <script src="/assets/js/transitionControl.js" defer></script> -->
-<!-- <script src="/assets/js/horizontalScrollService.js" defer></script>
-<script src="/assets/js/horizontalScrollControl.js" defer></script> -->
+<script src="/assets/js/horizontalScrollService.js" defer></script>
+<script src="/assets/js/horizontalScrollControl.js" defer></script>
 <script src="/assets/js/transit-service.min.js" defer></script>
-<script src="/assets/js/horizontal-scroll.min.js" defer></script>
+<!-- <script src="/assets/js/horizontal-scroll.min.js" defer></script> -->
 <!-- <script src="/assets/libs/three/three.js" defer></script> 
 <script src="/assets/libs/three/orbitcontrols.js" defer></script> 
 <script src="/assets/libs/three/gltf-loader.js" defer></script> 
