--- a/src/index.html
+++ b/src/index.html
@@ -6,24 +6,23 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <link rel="icon" type="image/x-icon" href="http://cactussoft.std-715.ist.mospolytech.ru/assets/cactussoft.png">
-  <link rel="apple-touch-icon" href="http://cactussoft.std-715.ist.mospolytech.ru/assets/cactussoft.png">
+  <link rel="icon" type="image/x-icon" href="https://cactussoft.op/assets/cactussoft.png">
+  <link rel="apple-touch-icon" href="https://cactussoft.op/assets/cactussoft.png">
   <meta name="theme-color" content="#00AE98">
   <meta name="author" content="CactusWeb">
-  <meta name="description" content="Great tool-set to increase your winrate. Powered by CactusManager.">
+  <meta name="description" content="Advanced software created to help you secure resellable goods at retail prices. Powered by CactusManager.">
 
   <meta name="robots" content="all" />
   
-  <meta property="og:image" content="http://cactussoft.std-715.ist.mospolytech.ru/assets/img/cactussoft.png">
-  <meta property="og:image:secure_url" content="http://cactussoft.std-715.ist.mospolytech.ru/assets/img/cactussoft.png">
-  <meta name="og:description" content="Great tool-set to increase your winrate. Powered by CactusManager.">
+  <meta property="og:image" content="https://cactussoft.op/assets/img/cactussoft.png">
+  <meta property="og:image:secure_url" content="https://cactussoft.op/assets/img/cactussoft.png">
+  <meta name="og:description" content="Advanced software created to help you secure resellable goods at retail prices. Powered by CactusManager.">
 
   <meta name="site_name" content="CactusSoft">
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="keywords" content="resell, cook-group, cookgroup, autofill, cactus, soft, software, cactussoft_io, cactusweb, tools, bot, extension, chrome, adidas, shopify, supreme, stripe, aco, filling, autofilling, metalabs, tl, solebox, snipes, link-appender, enigmarobotics, enigma, fuse, twittcatcher, satanbots">
+  <meta name="keywords" content="resell, cook-group, cookgroup, autofill, cactussoft, cactus, soft, software, cactussoft_io, cactusweb, tools, bot, extension, chrome, adidas, shopify, supreme, stripe, aco, filling, autofilling, metalabs, tl, solebox, snipes, link-appender, enigmarobotics, enigma, fuse, twittcatcher, satanbots">
 
-  <!-- Yandex.Metrika counter -->
-  <!-- <script type="text/javascript" >
+  <script type="text/javascript" >
     (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
     m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
     (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
@@ -34,22 +33,13 @@
          accurateTrackBounce:true
     });
   </script>
-  <noscript><div><img src="https://mc.yandex.ru/watch/77563180" style="position:absolute; left:-9999px;" alt="" /></div></noscript> -->
-<!-- /Yandex.Metrika counter -->
+  <noscript><div><img src="https://mc.yandex.ru/watch/77563180" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
 </head>
 <body>
   
   <app-root></app-root>
 </body>
-<!-- <script src="/assets/js/transitService.js" defer></script>
-<script src="/assets/js/transitionControl.js" defer></script> -->
-<script src="/assets/js/horizontalScrollService.js" defer></script>
-<script src="/assets/js/horizontalScrollControl.js" defer></script>
 <script src="/assets/js/transit-service.min.js" defer></script>
-<!-- <script src="/assets/js/horizontal-scroll.min.js" defer></script> -->
-<!-- <script src="/assets/libs/three/three.js" defer></script> 
-<script src="/assets/libs/three/orbitcontrols.js" defer></script> 
-<script src="/assets/libs/three/gltf-loader.js" defer></script> 
-<script src="/assets/js/init-3d-cactus.js" defer></script>  -->
+<script src="/assets/js/horizontal-scroll.min.js" defer></script>
 
 </html>
