--- a/src/index.html
+++ b/src/index.html
@@ -6,16 +6,16 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <link rel="icon" type="image/x-icon" href="https://cactussoft.op/assets/cactussoft.png">
-  <link rel="apple-touch-icon" href="https://cactussoft.op/assets/cactussoft.png">
+  <link rel="icon" type="image/x-icon" href="https://cactussoft.io/assets/cactussoft.png">
+  <link rel="apple-touch-icon" href="https://cactussoft.io/assets/cactussoft.png">
   <meta name="theme-color" content="#00AE98">
   <meta name="author" content="CactusWeb">
   <meta name="description" content="Advanced software created to help you secure resellable goods at retail prices. Powered by CactusManager.">
 
   <meta name="robots" content="all" />
   
-  <meta property="og:image" content="https://cactussoft.op/assets/img/cactussoft.png">
-  <meta property="og:image:secure_url" content="https://cactussoft.op/assets/img/cactussoft.png">
+  <meta property="og:image" content="https://cactussoft.io/assets/img/cactussoft.png">
+  <meta property="og:image:secure_url" content="https://cactussoft.io/assets/img/cactussoft.png">
   <meta name="og:description" content="Advanced software created to help you secure resellable goods at retail prices. Powered by CactusManager.">
 
   <meta name="site_name" content="CactusSoft">
