--- a/src/index.html
+++ b/src/index.html
@@ -34,9 +34,19 @@
     });
   </script>
   <noscript><div><img src="https://mc.yandex.ru/watch/77563180" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+  <!-- Google Tag Manager -->
+  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-PCNL5KQ');</script>
+  <!-- End Google Tag Manager -->
 </head>
 <body>
-  
+  <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PCNL5KQ"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
   <app-root></app-root>
 </body>
 <script src="/assets/js/transit-service.min.js" defer></script>
