--- a/src/index.html
+++ b/src/index.html
@@ -21,31 +21,32 @@
   <meta name="site_name" content="CactusSoft">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="keywords" content="resell, cook-group, cookgroup, autofill, cactussoft, cactus, soft, software, cactussoft_io, cactusweb, tools, bot, extension, chrome, adidas, shopify, supreme, stripe, aco, filling, autofilling, metalabs, tl, solebox, snipes, link-appender, enigmarobotics, enigma, fuse, twittcatcher, satanbots">
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-VKFTQC3X4B"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-  <script type="text/javascript" >
-    (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
-    m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
-    (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+  gtag('config', 'G-VKFTQC3X4B'); -->
+</script>
+</script>
 
-    ym(77563180, "init", {
-         clickmap:true,
-         trackLinks:true,
-         accurateTrackBounce:true
-    });
-  </script>
-  <noscript><div><img src="https://mc.yandex.ru/watch/77563180" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+
   <!-- Google Tag Manager -->
-  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+<!-- <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
   new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
   j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-  })(window,document,'script','dataLayer','GTM-PCNL5KQ');</script>
+  })(window,document,'script','dataLayer','GTM-PCNL5KQ');</script> -->
   <!-- End Google Tag Manager -->
+
+
 </head>
 <body>
   <!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PCNL5KQ"
-  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PCNL5KQ"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript> -->
   <!-- End Google Tag Manager (noscript) -->
   <app-root></app-root>
 </body>
