--- a/src/index.html
+++ b/src/index.html
@@ -16,9 +16,14 @@
   
   <meta property="og:image" content="https://cactussoft.io/assets/img/cactussoft.png">
   <meta property="og:image:secure_url" content="https://cactussoft.io/assets/img/cactussoft.png">
-  <meta name="og:description" content="Advanced software created to help you secure resellable goods at retail prices. Powered by CactusManager.">
+  <meta property="og:description" content="Advanced software created to help you secure resellable goods at retail prices. Powered by CactusManager.">
+  <meta property="og:site_name" content="CactusSoft">
+  <meta property="og:url" content="https://cactussoft.io/">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="CactusSoft">
 
   <meta name="site_name" content="CactusSoft">
+  <meta name="url" content="https://cactussoft.io/">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="keywords" content="resell, cook-group, cookgroup, autofill, cactussoft, cactus, soft, software, cactussoft_io, cactusweb, tools, bot, extension, chrome, adidas, shopify, supreme, stripe, aco, filling, autofilling, metalabs, tl, solebox, snipes, link-appender, enigmarobotics, enigma, fuse, twittcatcher, satanbots">
 <!-- Global site tag (gtag.js) - Google Analytics -->
