--- a/src/index.html
+++ b/src/index.html
@@ -1,53 +1,48 @@
 <!doctype html>
-<html lang="en" prefix="og: http://ogp.me/ns#">
+<html lang="en">
 <head>
   <meta charset="utf-8">
   <title>CactusSoft</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+
+
   <link rel="icon" type="image/x-icon" href="https://cactussoft.io/assets/cactussoft.png">
   <link rel="apple-touch-icon" href="https://cactussoft.io/assets/cactussoft.png">
   <meta name="theme-color" content="#00AE98">
-  <meta name="author" content="CactusWeb">
-  <meta name="description" content="Advanced software created to help you secure resellable goods at retail prices. Powered by CactusManager.">
 
-  <meta name="robots" content="all" />
+  <meta name="author" content="CactusWeb">
+  <meta property="og:author" content="CactusWeb">
+
+  <meta name="description" content="Advanced software created to help you secure resellable goods at retail prices. Powered by CactusManager.">
+  <meta property="og:description" content="Advanced software created to help you secure resellable goods at retail prices. Powered by CactusManager.">
+
+  <meta name="robots" content="index,follow">
   
   <meta property="og:image" content="https://cactussoft.io/assets/img/cactussoft.png">
   <meta property="og:image:secure_url" content="https://cactussoft.io/assets/img/cactussoft.png">
-  <meta property="og:description" content="Advanced software created to help you secure resellable goods at retail prices. Powered by CactusManager.">
-  <meta property="og:site_name" content="CactusSoft">
-  <meta property="og:url" content="https://cactussoft.io/">
-  <meta property="og:type" content="website">
+  
+  <meta property="og:image:width" content="150">
+  <meta property="og:image:height" content="150">
+  
+  <meta name="title" content="CactusSoft">
   <meta property="og:title" content="CactusSoft">
 
+  <meta property="og:site_name" content="CactusSoft">
   <meta name="site_name" content="CactusSoft">
+
   <meta name="url" content="https://cactussoft.io/">
+  <meta property="og:url" content="https://cactussoft.io/">
+
+
+  <meta property="og:type" content="website">
+  <meta name="type" content="website">
+
+
   <meta name="twitter:card" content="summary_large_image">
   <meta name="keywords" content="resell, cook-group, cookgroup, autofill, cactussoft, cactus, soft, software, cactussoft_io, cactusweb, tools, bot, extension, chrome, adidas, shopify, supreme, stripe, aco, filling, autofilling, metalabs, tl, solebox, snipes, link-appender, enigmarobotics, enigma, fuse, twittcatcher, satanbots">
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-VKFTQC3X4B"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
 
-  gtag('config', 'G-VKFTQC3X4B'); -->
-</script>
-</script>
-
-
-  <!-- Google Tag Manager -->
-<!-- <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-  })(window,document,'script','dataLayer','GTM-PCNL5KQ');</script> -->
-  <!-- End Google Tag Manager -->
-
-
-</head>
 <body>
   <app-root></app-root>
 </body>
