--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
 
-  <link rel="icon" type="image/x-icon" href="https://cactussoft.io/assets/cactussoft.png">
+  <link rel="icon" type="image/x-icon" href="/assets/cactussoft.png">
   <link rel="apple-touch-icon" href="https://cactussoft.io/assets/cactussoft.png">
   <meta name="theme-color" content="#00AE98">
 
@@ -20,8 +20,8 @@
 
   <meta name="robots" content="index,follow">
   
-  <meta property="og:image" content="https://cactussoft.io/assets/img/cactussoft.png">
-  <meta property="og:image:secure_url" content="https://cactussoft.io/assets/img/cactussoft.png">
+  <meta property="og:image" content="https://cactussoft.io/assets/img/main.png">
+  <meta property="og:image:secure_url" content="https://cactussoft.io/assets/img/main.png">
   
   <meta property="og:image:width" content="150">
   <meta property="og:image:height" content="150">
