--- a/src/index.html
+++ b/src/index.html
@@ -23,8 +23,7 @@
   <meta property="og:image" content="https://cactussoft.io/assets/img/main.png">
   <meta property="og:image:secure_url" content="https://cactussoft.io/assets/img/main.png">
   
-  <meta property="og:image:width" content="150">
-  <meta property="og:image:height" content="150">
+  <meta property="og:image:width" content="350">
   
   <meta name="title" content="CactusSoft">
   <meta property="og:title" content="CactusSoft">
@@ -39,14 +38,16 @@
   <meta property="og:type" content="website">
   <meta name="type" content="website">
 
-
+  
   <meta name="twitter:card" content="summary_large_image">
   <meta name="keywords" content="resell, cook-group, cookgroup, autofill, cactussoft, cactus, soft, software, cactussoft_io, cactusweb, tools, bot, extension, chrome, adidas, shopify, supreme, stripe, aco, filling, autofilling, metalabs, tl, solebox, snipes, link-appender, enigmarobotics, enigma, fuse, twittcatcher, satanbots">
-
-<body>
-  <app-root></app-root>
-</body>
-<script src="/assets/js/transit-service.min.js" defer></script>
-<script src="/assets/js/horizontal-scroll.min.js" defer></script>
+  
+  <link rel="stylesheet" href="/assets/css/simple-adaptive-slider.min.css">
+  <script src="/assets/js/simple-adaptive-slider.min.js"></script>
+  <body>
+    <app-root></app-root>
+  </body>
+  <script src="/assets/js/transit-service.min.js" defer></script>
+  <script src="/assets/js/horizontal-scroll.min.js" defer></script>
 
 </html>
