--- a/src/index.html
+++ b/src/index.html
@@ -20,8 +20,8 @@
 
   <meta name="robots" content="index,follow">
   
-  <meta property="og:image" content="https://cactussoft.io/assets/img/main.png">
-  <meta property="og:image:secure_url" content="https://cactussoft.io/assets/img/main.png">
+  <meta property="og:image" content="https://cactussoft.io/assets/main.png">
+  <meta property="og:image:secure_url" content="https://cactussoft.io/assets/main.png">
   
   
   <meta name="title" content="CactusSoft">
