поправил index.html

--- a/src/index.html
+++ b/src/index.html
@@ -40,13 +40,12 @@
   
   <meta name="twitter:card" content="summary_large_image">
   <meta name="keywords" content="resell, cook-group, cookgroup, autofill, cactussoft, cactus, soft, software, cactussoft_io, cactusweb, tools, bot, extension, chrome, adidas, shopify, supreme, stripe, aco, filling, autofilling, metalabs, tl, solebox, snipes, link-appender, enigmarobotics, enigma, fuse, twittcatcher, satanbots">
-  
-  <link rel="stylesheet" href="/assets/css/simple-adaptive-slider.min.css">
+</head>
   <body>
     <app-root></app-root>
   </body>
   <script src="/assets/js/transit-service.min.js" defer></script>
   <script src="/assets/js/horizontal-scroll.min.js" defer></script>
-  <script src="/assets/js/simple-adaptive-slider.min.js"></script>
+  <script src=""></script>
 
 </html>
