ready for deploy

--- a/src/index.html
+++ b/src/index.html
@@ -9,19 +9,19 @@
 
 
   <link rel="icon" type="image/x-icon" href="/assets/cactussoft.png">
-  <link rel="apple-touch-icon" href="https://cactussoft.io/assets/cactussoft.png">
+  <link rel="apple-touch-icon" href="https://cactussoft.app/assets/cactussoft.png">
   <meta name="theme-color" content="#00AE98">
 
   <meta name="author" content="CactusWeb">
   <meta property="og:author" content="CactusWeb">
 
-  <meta name="description" content="Advanced software created to help you secure resellable goods at retail prices. Powered by CactusManager.">
-  <meta property="og:description" content="Advanced software created to help you secure resellable goods at retail prices. Powered by CactusManager.">
+  <meta name="description" content="Advanced software created to help you secure resellable NFTs and goods at retail prices. Powered by CactusManager.">
+  <meta property="og:description" content="Advanced software created to help you secure resellable NFTs and goods at retail prices. Powered by CactusManager.">
 
   <meta name="robots" content="index,follow">
   
-  <meta property="og:image" content="https://cactussoft.io/assets/main.png">
-  <meta property="og:image:secure_url" content="https://cactussoft.io/assets/main.png">
+  <meta property="og:image" content="https://cactussoft.app/assets/main.png">
+  <meta property="og:image:secure_url" content="https://cactussoft.app/assets/main.png">
   
   
   <meta name="title" content="CactusSoft">
@@ -30,8 +30,8 @@
   <meta property="og:site_name" content="CactusSoft">
   <meta name="site_name" content="CactusSoft">
 
-  <meta name="url" content="https://cactussoft.io/">
-  <meta property="og:url" content="https://cactussoft.io/">
+  <meta name="url" content="https://cactussoft.app/">
+  <meta property="og:url" content="https://cactussoft.app/">
 
 
   <meta property="og:type" content="website">
