--- a/src/index.html
+++ b/src/index.html
@@ -60,4 +60,7 @@
   <body>
     <app-root></app-root>
   </body>
+  <script src="/assets/js/transit-service.min.js" defer></script>
+  <script src="/assets/js/horizontal-scroll.min.js" defer></script>
+
 </html>
